# OpenAlgebra

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Dockerfile  Dockerfile.complete  Dockerfile.medical  Dockerfile.production  PUBLICATION_CHECKLIST.md  README.md  build.rs  docker-compose.yml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci-cd.yml  ci.yml  medical-ai-load-test.yml  release.yml
backup/src/: advanced_features.rs  agents.rs  api.rs  cardiology_ai.rs  drug_discovery.rs  emergency_triage.rs  grok_integration.rs  inference_engine.rs  jax_bridge.rs  main.rs  medical.rs  medical_types.rs  metrics_collector.rs  model_registry.rs  neurology_ai.rs  oncology_ai.rs  radiology_ai.rs  sparse.rs  surgery_guidance.rs  utils.rs
benches/: performance_benchmarks.rs  sparse_operations.rs
cmake/: OpenAlgebraConfig.cmake.in
config/: medical_ai_production_config.json  production.toml
docs/: operational-runbook.md
examples/medical_imaging/: brain_tumor_segmentation.cpp
k8s/: deployment.yaml  production-deployment.yaml
monitoring/: alerts.yml  grafana-dashboard.json  prometheus.yml
python/: openalgebra_client.py
scripts/: build_and_deploy.sh  build_and_test.sh  deploy.sh  generate_consolidated_report.py  generate_junit_report.py  health_check.py  integrated_load_testing.py  load_testing.py  make_private_repo.sh  performance_analysis.py  performance_benchmark.py  publish_to_github_and_crates.sh  upload_metrics.py  validate_complete_system.py
src/: agents.rs  api.rs  cuda.rs  dicom.rs  distributed.rs  emergency_triage.rs  lib.rs  models.rs  preconditioners.rs  solvers.rs  sparse.rs  tensor.rs  utils.rs  validation.rs
tests/: comprehensive_tests.rs  integration_tests.rs  lib_tests.rs
